// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`native <Text /> when Text with newline children rendered match snapshot 1`] = `
<Text
  lineBreakMode="tail"
  style={
<<<<<<< HEAD
    Object {
      "color": "#101010",
      "fontFamily": "Pretendard",
      "fontSize": 34,
      "fontWeight": "700",
      "lineHeight": 44,
    }
=======
    Array [
      Object {
        "alignContent": "stretch",
        "color": "#101010",
        "display": "flex",
        "flexDirection": "column",
        "flexShrink": 0,
        "fontFamily": "Pretendard",
        "fontSize": 34,
        "fontWeight": "700",
        "lineHeight": 44,
      },
      undefined,
    ]
>>>>>>> 9537e41 (fix: update snapshot)
  }
>
  Some
  <Text
<<<<<<< HEAD
    style={Object {}}
=======
    style={
      Array [
        Object {
          "alignContent": "stretch",
          "display": "flex",
          "flexDirection": "column",
          "flexShrink": 0,
        },
        undefined,
      ]
    }
>>>>>>> 9537e41 (fix: update snapshot)
  >
    

  </Text>
  Thing
</Text>
`;

exports[`native <Text /> when title1 Text rendered match snapshot 1`] = `
<Text
  lineBreakMode="tail"
  style={
<<<<<<< HEAD
    Object {
      "color": "#101010",
      "fontFamily": "Pretendard",
      "fontSize": 34,
      "fontWeight": "700",
      "lineHeight": 44,
    }
=======
    Array [
      Object {
        "alignContent": "stretch",
        "color": "#101010",
        "display": "flex",
        "flexDirection": "column",
        "flexShrink": 0,
        "fontFamily": "Pretendard",
        "fontSize": 34,
        "fontWeight": "700",
        "lineHeight": 44,
      },
      undefined,
    ]
>>>>>>> 9537e41 (fix: update snapshot)
  }
>
  Something
</Text>
`;
